# dospy-2

./: README.md  gaven.txt  main.py  pyproject.toml
home/: homepage.html
static/css/: stylesheet.css
templates/: doom.html  doom2.html  doomlite.html  googledoom.html  mortalKombat.html  quake.html  template.html  v86.html  wolfenstein.html
