[tool.poetry]
name = "dospy-2"
version = "0.1.0"
description = "a basic flask server that can run games and can avoid being blocked by a high level system"
authors = ["dantemorrison@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
Markdown = "^3.2.2"
Pygments = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
